@@ -3,6 +3,7 @@ package com.foodstore.service.impl;
 import java.sql.Date;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import javax.transaction.Transactional;
 
@@ -72,11 +73,11 @@ public class DiscountServiceImpl implements DiscountService {
 	public Page<Discount> getByFilter(Pageable pageable, String keyword, Optional<Boolean> is_fixed,
 			Optional<Date> start_date, Optional<Date> end_date, Optional<Boolean> isDisplay, Optional<Long> userId) {
 		List<Discount> list = discountDAO.findByKeyword(keyword);
-		if(is_fixed.isPresent()) list = list.stream().filter(o-> o.is_fixed() == is_fixed.get()).toList();
-		if(start_date.isPresent()) list = list.stream().filter(o-> o.getCreate_date() == start_date.get()).toList();
-		if(end_date.isPresent()) list = list.stream().filter(o-> o.getEnd_date() == end_date.get()).toList();
-		if(isDisplay.isPresent()) list = list.stream().filter(o-> o.is_display() == isDisplay.get()).toList();
-		if(userId.isPresent()) list = list.stream().filter(o-> o.getUser_d().getId() == userId.get()).toList();
+		if(is_fixed.isPresent()) list = list.stream().filter(o-> o.is_fixed() == is_fixed.get()).collect(Collectors.toList());
+		if(start_date.isPresent()) list = list.stream().filter(o-> o.getCreate_date() == start_date.get()).collect(Collectors.toList());
+		if(end_date.isPresent()) list = list.stream().filter(o-> o.getEnd_date() == end_date.get()).collect(Collectors.toList());
+		if(isDisplay.isPresent()) list = list.stream().filter(o-> o.is_display() == isDisplay.get()).collect(Collectors.toList());
+		if(userId.isPresent()) list = list.stream().filter(o-> o.getUser_d().getId() == userId.get()).collect(Collectors.toList());
 		return new PageImpl<Discount>(list, pageable, list.size());
 	}
 
